--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,17 @@
-Source: docs-mx
-Section: documentation
+Source: mx-docs
+Section: doc
 Priority: optional
-Maintainer: anticapitalista <antiX@operamail.com>
-Build-Depends: debhelper (>= 9.20120115)
-Standards-Version: 3.9.4
+Maintainer: Steven Pusser <stevep@mxlinux.org>
+Bugs: mailto: maintainer@mepiscommunity.org
+XSBC-Original-Maintainer: anticapitalista <antiX@operamail.com>
+Build-Depends: debhelper (>= 9)
+Standards-Version: 3.9.6
 Homepage: http://antix.mepis.org
 
-Package: docs-mx
+Package: mx-docs
+Section: doc
 Architecture: all
-Depends: desktop-defaults-xfce-mx (>= 0.1.5)
-Description: Documentation for MX-14.
+Conflicts: docs-mx, desktop-defaults-xfce-mx, mx-desktop-defaults
+Replaces: docs-mx 
+Description: user manual for MX 17.
+ This is the PDF user manual included with MX 17.
