Translation refresh Jan 2019 - Help.desktop file only

--- a/Help.desktop
+++ b/Help.desktop
@@ -1,62 +1,62 @@
 [Desktop Entry]
 Categories=System;
-Comment[en_US]=Orientation and information
-Comment=Orientation and information
-Comment[ca_ES]=Orientació i informació
-Comment[de]=Orientierung und Information
-Comment[el]=Προσανατολισμός και πληροφόρηση
-Comment[es]=Orientación e información
-Comment[fi]=Suunta ja tietoa
-Comment[fr]=Orientation et d'information
-Comment[nl]=Oriëntatie en informatie
-Comment[pt_BR]=Orientação e informação
-Comment[sv]=Orientering och upplysningar
 Exec=mx-manual
 GenericName[en_US]=MX User Manual
 GenericName=MX User Manual
 Icon=help-browser.png
 MimeType=
-Name[en_US]=MX User Manual
 Name=MX User Manual
 Name[ar]=مكس دليل المستخدم
 Name[bg]=Ръководство за потребителя на MX
-Name[ca_ES]=Manual de l'usuari MX
+Name[ca]=Manual de l'usuari MX
 Name[cs]=Uživatelská příručka MX
-Name[da]=MX brugervejledning
+Name[da]=MX Brugermanual
 Name[de]=MX Benutzerhandbuch
 Name[el]=Εγχειρίδιο χρήστη MX
-Name[en]=MX User Manual
-Name[es]=MX Manual de usuario
+Name[es]=MX Manual de Usuario
 Name[et]=MX kasutusjuhend
 Name[eu]=MX erabiltzailearen eskuliburua
 Name[fa]=MX کتابچه راهنمای کاربر
-Name[fi]=MX-käyttöohje
-Name[fr]=Manuel d'utilisation MX
+Name[fi]=MX Käyttöopas
+Name[fr]=MX Manuel de l'utilisateur
 Name[hi]=एमएक्स उपयोगकर्ता मैनुअल
 Name[hr]=MX Upute za uporabu
 Name[hu]=MX felhasználói kézikönyv
 Name[is]=MX notendahandbók
-Name[it]=MX Manuale dell'utente
+Name[it]=MX Manuale Utenti
 Name[ja]=MXユーザーマニュアル
 Name[ko]=MX 사용자 설명서
 Name[lt]=MX Vartotojo vadovas
 Name[mk]=Прирачник за корисник MX
 Name[nb]=MX Brukerhåndbok
-Name[nl]=MX gebruikershandleiding
+Name[nl]=MX Gebruikershandleiding
 Name[pl]=MX Podręcznik użytkownika
-Name[pt]=MX Manual do Usuário
-Name[pt_BR]=MX Manual do Usuário
+Name[pt]=Manual de Utilização do MX
+Name[pt_BR]=MX Manual de Usuário
 Name[ro]=MX Manual de utilizare
 Name[ru]=Руководство пользователя MX
 Name[sk]=MX užívateľská príručka
 Name[sl]=MX Navodila za uporabo
 Name[sq]=MX Manual përdorimi
 Name[sr]=МКС Упутство за употребу
-Name[sv]=MX användarhandbok
+Name[sv]=MX Användarhandbok
 Name[tr]=MX Kullanım Kılavuzu
 Name[uk]=Керівництво користувача MX
 Name[zh_CN]=MX用户手册
 Name[zh_TW]=MX用戶手冊
+Comment=Orientation and information
+Comment[ca_ES]=Orientació i informació
+Comment[de]=Orientierung und Information
+Comment[el]=Προσανατολισμός και πληροφόρηση
+Comment[en_US]=Orientation and information
+Comment[es]=Orientación e información
+Comment[fi]=Suunta ja tietoa
+Comment[fr]=Guide et informations
+Comment[it]=Orientamento e informazione
+Comment[nl]=Oriëntatie en informatie
+Comment[pt]=Orientação e informação
+Comment[pt_BR]=Informações e dicas sobre o MX Linux
+Comment[sv]=Orientering och information
 NoDisplay=false
 Path=
 StartupNotify=true
