Translation refresh for MX-19

--- a/Help.desktop
+++ b/Help.desktop
@@ -85,7 +85,7 @@ Comment[pt]=Orientação e informação
 Comment[ro]=Orientation and information
 Comment[ru]=Orientation and information
 Comment[sk]=Orientation and information
-Comment[sl]=Orientation and information
+Comment[sl]=Usmerjanje in informacije
 Comment[sq]=Orientation and information
 Comment[sr]=Orientation and information
 Comment[sv]=Orientering och information
