Translation refresh (Help.desktop only)

--- a/Help.desktop
+++ b/Help.desktop
@@ -33,6 +33,7 @@ Name[kk]=MX User Manual
 Name[ko]=MX 사용자 설명서
 Name[lt]=MX Vartotojo vadovas
 Name[mk]=Прирачник за корисник MX
+Name[mr]=MX User Manual
 Name[nb]=MX Brukerhåndbok
 Name[nl]=MX Gebruikershandleiding
 Name[pl]=MX Podręcznik użytkownika
@@ -77,6 +78,7 @@ Comment[kk]=Orientation and information
 Comment[ko]=Orientation and information
 Comment[lt]=Orientation and information
 Comment[mk]=Orientation and information
+Comment[mr]=Orientation and information
 Comment[nb]=Orientation and information
 Comment[nl]=Oriëntatie  en informatie
 Comment[pl]=Zapoznaj się z system i jego możliwościami
