--- a/FAQ.desktop
+++ b/FAQ.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Categories=System;
-Exec=xdg-open /usr/local/share/doc/FAQ.pdf
+Exec=mx-faq
 GenericName[en_US]=FAQ
 GenericName=FAQ
 Icon=help-browser.png
