--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,7 @@
 Source: mx-docs
 Section: doc
 Priority: optional
-Maintainer: Steven Pusser <stevep@mxlinux.org>
-Bugs: mailto: maintainer@mepiscommunity.org
-XSBC-Original-Maintainer: anticapitalista <antiX@operamail.com>
+Maintainer: Dolphin Oracle <dolphinoracle@gmail.com>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
 Homepage: http://antix.mepis.org
@@ -13,5 +11,5 @@ Section: doc
 Architecture: all
 Conflicts: docs-mx, desktop-defaults-xfce-mx, mx-desktop-defaults
 Replaces: docs-mx 
-Description: user manual for MX 17.
- This is the PDF user manual included with MX 17.
+Description: user manual for MX 
+ This is the PDF user manual included with MX 
